  of nested extension types. Therefore the record type only grows
  linear in the number of extensions and not in the number of fields.
  The top-level (users) view on records is preserved.  Potential
  INCOMPATIBILITY only in strange cases, where the theory depends on
  the old record representation. The type generated for a record is
  called <record_name>_ext_type.

* HOL: symbolic syntax of Hilbert Choice Operator is now as follows:

  syntax (epsilon)
    "_Eps" :: "[pttrn, bool] => 'a"    ("(3\<some>_./ _)" [0, 10] 10)

  The symbol \<some> is displayed as the alternative epsilon of LaTeX
  and x-symbol; use option '-m epsilon' to get it actually printed.
  Moreover, the mathematically important symbolic identifier
  \<epsilon> becomes available as variable, constant etc.

* Simplifier: "record_upd_simproc" for simplification of multiple
  record updates enabled by default.  INCOMPATIBILITY: old proofs
  break occasionally, since simplification is more powerful by
  default.


*** HOLCF ***

* HOLCF: discontinued special version of 'constdefs' (which used to
  support continuous functions) in favor of the general Pure one with
  full type-inference.


*** ZF ***

* ZF/ex/{Group,Ring}: examples in abstract algebra, including the First
  Isomorphism Theorem (on quotienting by the kernel of a homomorphism).



New in Isabelle2004 (April 2004)
--------------------------------

*** General ***

* Provers/order.ML:  new efficient reasoner for partial and linear orders.
  Replaces linorder.ML.

* Pure: Greek letters (except small lambda, \<lambda>), as well as Gothic
  (\<aa>...\<zz>\<AA>...\<ZZ>), calligraphic (\<A>...\<Z>), and Euler
  (\<a>...\<z>), are now considered normal letters, and can therefore
  be used anywhere where an ASCII letter (a...zA...Z) has until
  now. COMPATIBILITY: This obviously changes the parsing of some
  terms, especially where a symbol has been used as a binder, say
  '\<Pi>x. ...', which is now a type error since \<Pi>x will be parsed